--- a/index.html
+++ b/index.html
@@ -283,14 +283,16 @@
             </div>
         </div>
 
-
+<!--Formulario typeform-->
         <section id="contacto" class="bg-dark text-white py-4">
             <div class="container">
                 <div class="row">
                     <div class="col">
                         <h2 class="text-center">Contacto</h2>
                         <form>
-                            <div data-tf-widget="gJ31HJbs" data-tf-iframe-props="title=viajes chile" data-tf-medium="snippet" style="width:100%;height:400px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+                            <div data-tf-widget="gJ31HJbs" data-tf-iframe-props="title=viajes chile"
+                                data-tf-medium="snippet" style="width:100%;height:400px;"></div>
+                            <script src="//embed.typeform.com/next/embed.js"></script>
                         </form>
                     </div>
                 </div>
